# predict-resolve-tally

./: Cargo.toml  LICENCE  README.md
src/: cli.rs  data.rs  lib.rs  main.rs  model.rs
